fix: add docker configurations and enviroments variables